cmake_minimum_required(VERSION 3.17)
project(PROG2400_700_lectures)

set(CMAKE_CXX_STANDARD 14)

add_executable(echo echo/main.cpp)
add_executable(commandline commandline/main.cpp)
add_executable(stringstream stringstream/main.cpp)
add_executable(DynamicArrays DynamicArrays/main.cpp)
add_executable(LinkedLists LinkedLists/main.cpp)
add_executable(Queues Queues/main.cpp)
add_executable(Stacks Stacks/main.cpp)
add_executable(palindrome palindrome/main.cpp)
add_executable(recursion recursion/main.cpp)
add_executable(factorial factorial/main.cpp)
add_executable(recursive_palindrome RecursivePalindrome/main.cpp)